--- a/Decorator/Decorator.csproj
+++ b/Decorator/Decorator.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArmorUpgrade.cs" />
+    <Compile Include="Dps.cs" />
+    <Compile Include="IUnit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tank.cs" />
+    <Compile Include="UniteDecorator.cs" />
+    <Compile Include="WeaponUpgrade.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
