--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BMW.cs" />
+    <Compile Include="Builder.cs" />
+    <Compile Include="Director.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Smart.cs" />
+    <Compile Include="Toyota.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
