--- a/Factory/Factory.csproj
+++ b/Factory/Factory.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BMWFactory.cs" />
+    <Compile Include="BMW.cs" />
+    <Compile Include="Car.cs" />
+    <Compile Include="CarFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Toyota.cs" />
+    <Compile Include="ToyotaFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
